--- a/views/word_definitions_form.erb
+++ b/views/word_definitions_form.erb
@@ -2,7 +2,7 @@
 
 <form action="/definitions" method="post">
   <input id='word_id' name='word_id' type='hidden' value='<%= @word.id() %>'>
-  <label for='define_word'>Define Word:</label>
+  <label for='define_word'>define word:</label>
   <input id='define_word' name='define_word' type='text'>
 
   <button type="submit">Add Definition</button>
