streamline erb files, debug word.erb

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,5 @@
 <h1>My Dictionary</h1>
-<a href="/words">See my list of words</a>
-<a href="/words/new">Add a new word</a>
+<div class="container">
+  <a href="/words">See my list of words</a>
+  <a href="/words/new">Add a new word</a>
+</div>  
