--- a/views/word_definitions_form.erb
+++ b/views/word_definitions_form.erb
@@ -7,3 +7,6 @@
 
   <button type="submit">Add Definition</button>
 </form>
+
+<a href="/words">Go back to your list of words</a>
+<a href="/">Go Home</a>
