--- a/views/word.erb
+++ b/views/word.erb
@@ -1,9 +1,19 @@
 <h3>Here are your definitions for this word:</h3>
 <ul>
   <% @word.term().each() do |term| %>
-    <li><a href="/definitions/<%= term.id() %>"><%= term.define_word() %></a></li>
+    <%= term.define_word() %>
+
+  <li><a href="/definitions/<%= term.id() %>"><%= term.define_word() %></a></li>
   <% end %>
 </ul>
 
 <a href="/words/<%= @word.id()%>/definitions/new">Add a new definition</a>
+
+
+
 <a href="/">Return to Main Page</a>
+<a href="/words">Go back to your list of words</a>
+
+
+<!-- <% @word.term().each do |term| %>
+<% term.define_word() %><% end %> -->
