--- a/views/word_form.erb
+++ b/views/word_form.erb
@@ -1,7 +1,9 @@
 <h1>Add a word to your dictionary:</h1>
-<form>
+
 <form action ="/words" method="post">
-  <label for="new_word">new word:</label>
+  <div class="form-group">
+    <label for="new_word">Add a new word to your dictionary:</label>
     <input id="new_word" name="new_word" type="text">
     <button type="submit">Add Word</button>
+  </div>
 </form>
