--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
-<h1>My Dictionary</h1>
+
 <div class="container">
-  <a href="/words">See my list of words</a>
+  <a href="/words">See my list of words</a><br>
   <a href="/words/new">Add a new word</a>
-</div>  
+</div>
