--- a/views/word_definitions_form.erb
+++ b/views/word_definitions_form.erb
@@ -5,8 +5,8 @@
   <label for='define_word'>define word:</label>
   <input id='define_word' name='define_word' type='text'>
 
-  <button type="submit">Add Definition</button>
+  <button type="submit" class="btn">Add Definition</button>
 </form>
 
-<a href="/words">Go back to your list of words</a>
+<a href="/words">Go back to your list of words</a><br>
 <a href="/">Go Home</a>
