--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,14 +3,16 @@
   <head>
     <title>My Dictionary</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
-    <link  rel='stylesheet' href="/css/styles.css" >
+    <link  rel='stylesheet' href="/css/styles.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
   </head>
   <body>
     <div class="container">
-    <h1></h1>
-    <hr>
+      <div class="jumbotron">
+        <h1>My Dictionary</h1>
+      </div>
       <%= yield %>
     </div>
   </body>
