--- a/views/words.erb
+++ b/views/words.erb
@@ -1,10 +1,9 @@
-<h1>THIS IS YOUR LIST OF WORDS</h1>
 
 <h3>Click on a word to see all your definitions for that word:</h3>
-<ul>
+<ol>
   <% @words.each() do |word| %>
     <li><a href="/word/<%= word.id() %>"><%= word.new_word() %></a></li>
   <% end %>
-</ul>
-<a href="/words/new">Add a new word</a>
+</ol>
+<a href="/words/new">Add a new word</a><br>
 <a href="/">Go Home</a>
